--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script>
+      (function() {
+        const savedPath = localStorage.getItem('path');
+        if (savedPath) {
+          localStorage.removeItem('path');
+          if (savedPath !== window.location.pathname) {
+            window.history.replaceState(null, null, savedPath);
+          }
+        }
+      })();
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
