deploy: 4f9d2dbd95f964f8bb25519c5d0fc8f7e8c6b78e

--- a/404.html
+++ b/404.html
@@ -1,14 +1,17 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>Redirecting...</title>
   <script>
-    const segment = 1;
+    // Capture both path and query parameters
     const path = window.location.pathname;
+    const query = window.location.search;
     localStorage.setItem('path', path);
-    window.location.href = `/plumbing/`;
+    localStorage.setItem('query', query);
+    
+    // Redirect to base path while preserving query parameters
+    window.location.href = `/plumbing/${query}`;
   </script>
 </head>
 <body>
