--- a/404.html
+++ b/404.html
@@ -1,17 +1,14 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>Redirecting...</title>
   <script>
-    // Capture path and query separately
+    const segment = 1;
     const path = window.location.pathname;
-    const query = window.location.search;
-    localStorage.setItem('redirect_path', path);
-    localStorage.setItem('redirect_query', query);
-    
-    // Always redirect to base with no parameters
-    window.location.href = "/plumbing/";
+    localStorage.setItem('path', path);
+    window.location.href = `/plumbing/`;
   </script>
 </head>
 <body>
